@@ -459,7 +459,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = ../../brunet1/src/ ../brunet1/scripts ../../brunet1/docs/doxy ../src doxy
+INPUT                  = ../../brunet1-security/src/ ../brunet1-security/scripts ../../brunet1-security/docs/doxy ../src doxy
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
