@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <project name="ipop-common" default="build" basedir=".">
   <description> Builds the Ipop dll </description>
+  <property name="brunet.dir" value="../brunet1" unless="${property::exists('brunet.dir')}" />
   <property name="lib.dir" value="../../lib"/>
   <property name="build.dir" value="build" />
   <property name="bin.dir" value="../../bin"/>
@@ -18,6 +19,7 @@
         <include name="Brunet.XmlRpc.dll" />
         <include name="Brunet.DhtService.dll"/>
         <include name="Brunet.Security.dll"/>
+        <include name="Brunet.Coordinate.dll"/>
         <include name="Mono.Security.dll"/>
       </fileset>
     </copy>
@@ -26,7 +28,7 @@
         <include name="*.cs"/>
         <include name="../IpopNode/*.cs"/>
         <include name="../NetworkPackets/*.cs"/>
-        <include name="../../../brunet1/src/BasicNode/*.cs"/>
+        <include name="../../${brunet.dir}/src/BasicNode/*.cs"/>
       </sources>
       <references basedir="${build.dir}">
         <include name="Brunet.dll"/>
@@ -38,6 +40,7 @@
         <include name="Mono.Posix.dll"/>
         <include name="Brunet.Security.dll"/>
         <include name="Mono.Security.dll"/>
+        <include name="Brunet.Coordinate.dll"/>
       </references>
     </csc>
     <mkdir dir="${bin.dir}" failonerror="true"/>
