@@ -1,4 +1,9 @@
 ===============================================================================
+Revision 5
+-------------------------------------------------------------------------------
+- Tcp in Brunet fixed
+- Security in Brunet
+===============================================================================
 Revision 2
 -------------------------------------------------------------------------------
 - Updated to Brunet 1.01
